Fix project descriptions rendering outside of card w/ overflow hidden, add project link hover styling

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -117,6 +117,7 @@ body
         width: 100%
         border-radius: 15px
         border: 1px solid rgba(0,0,0,0.1)
+        overflow: hidden
 
         background-image: url("https://www.fridakahlo.org/images/paintings/self-portrait-with-necklace-of-thorns.jpg")
         background-size: contain
@@ -148,6 +149,10 @@ body
           a
             margin: 5px 10px
             font-size: 45px
+            transition: 0.5s ease
+            filter: drop-shadow(5px 5px 5px rgba(0,0,0,0.5))
+          a:hover
+            color: $res-bg
 
         .card-info:hover
           height: 100%
